# autogen-governance-adapter

./: AGENTS.md  CLAUDE.md  LICENSE  README.md  llms.txt  pyproject.toml
.github/workflows/: ci.yml
providers/moltbridge/: README.md
scripts/: generate_fixtures.py
src/autogen_governance_adapter/: __init__.py  canonicalization.py  delegation.py  errors.py  hook.py  passport.py  trust_provider.py
tests/: conftest.py  test_delegation.py  test_hook_deny_scope_narrow.py  test_hook_happy_path.py  test_passport.py  test_trust_provider.py
tests/fixtures/: deny_scope_narrow.json  happy_path.json  scope_widening_attempt.json
