[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autogen-governance-adapter"
version = "0.1.0"
description = "APS + SINT + pluggable trust provider governance adapter for AutoGen before_tool_call hook."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Tymofii Pidlisnyi", email = "tima@aeoess.com" },
    { name = "EchoOfDawn", email = "echo@sagemind.ai" },
]
keywords = ["autogen", "governance", "aps", "sint", "moltbridge", "delegation", "trust"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "cryptography>=41",
    "pynacl>=1.5",
    "jcs>=0.2",
    "httpx>=0.25",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "black>=24",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/aeoess/autogen-governance-adapter"
Issues = "https://github.com/aeoess/autogen-governance-adapter/issues"
AutoGen = "https://github.com/microsoft/autogen/issues/7525"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]
